# tn-math

./: Cargo.toml  README.md
src/: algebra.rs  big_numbers.rs  lib.rs  numbers.rs
src/algebra/: addition.rs  division.rs  multiplication.rs  power.rs  rest.rs  subtraction.rs
src/big_numbers/: big_decimal.rs
src/big_numbers/big_decimal/: sanitize.rs  sum.rs
src/numbers/: complement.rs  confront.rs  equalize.rs  fill.rs  get_digit.rs  minify.rs  multiplication.rs  number.rs  number_trait.rs  operations.rs  sign.rs  std.rs  sum.rs
src/numbers/multiplication/: multiplication.rs  shorter.rs
src/numbers/operations/: divide.rs  magnitude.rs  multiply.rs  sum.rs
src/numbers/sum/: complement.rs  integer_part_sum.rs  ordered.rs  rational_part_sum.rs  sum.rs
src/numbers/sum/ordered/: integer_part_sum.rs  rational_part_sum.rs
tests/: algebra.rs  big_numbers.rs  numbers.rs
